[package]
name = "rust-warp-react"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
warp = { version = "0.3", default-features = false }